# insider_trading

./: .gitignore  README.md  config.example.toml  config.toml  main.py  pyproject.toml
insider_trading/: cli.py  config.py  filters.py  market_cap.py  models.py  parsing.py  report.py  scoring.py  sec.py
insider_trading/prices/: stooq.py  yahoo.py
tests/: test_filters.py  test_scoring.py
