[project]
name = "insider-trading-tracker"
version = "0.1.0"
description = "Track interesting stocks based on insider trading metrics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "requests>=2.32.0"
]

[project.scripts]
insider-trading = "insider_trading.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
